初期ページ作成(selectActivity),スピナーを追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="start">start</string>
     <string name="stop">stop</string>
+    <string name="nextpage">nextPage</string>
 </resources>
